--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,25 +1,45 @@
 <p id="notice"><%= notice %></p>
 
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-3">
+            <%= render "form", room: Room.new       %>
+            <hr>
+        </div>
+        <div class="col-9">
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
 <h1>Rooms</h1>
 
 <table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th colspan="3"></th>
+        </tr>
+    </thead>
 
-  <tbody>
-    <% @rooms.each do |room| %>
-      <tr>
-        <td><%= room.name %></td>
-        <td><%= link_to 'Show', room %></td>
-        <td><%= link_to 'Edit', edit_room_path(room) %></td>
-        <td><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
+    <tbody>
+        <% @rooms.each do |room| %>
+        <tr>
+            <td><%= room.name %></td>
+            <td><%= link_to 'Show', room %></td>
+            <td><%= link_to 'Edit', edit_room_path(room) %></td>
+            <td><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+        <% end %>
+    </tbody>
 </table>
 
 <br>
