--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,6 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-3">
+            <p>Hello, <%= current_user.username%> </p>
             <%= render "form", room: Room.new       %>
             <hr>
             <% @rooms.each do |room| %>
