--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -18,6 +18,9 @@
             <% if @room.present? %>
             <div class="chat-room">
                 <p> <%= @room.name %> </p>
+                <% @room.messages.each do |message| %>
+                <p> <%=message.content%> </p>
+                <% end %>
                 <div class="chat-box">
                     <%= render "messages/form", message: Message.new, room: @room %>
                 </div>
