Display user name next to message

--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -19,7 +19,7 @@
             <div class="chat-room">
                 <p> <%= @room.name %> </p>
                 <% @room.messages.each do |message| %>
-                <p> <%=message.content%> </p>
+                <p> <%=message.content%> - <%= message.user.username%> </p>
                 <% end %>
                 <div class="chat-box">
                     <%= render "messages/form", message: Message.new, room: @room %>
