--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: message, local: true) do |form| %>
+<%= form_with(model: message, local: true, class:"form-inline") do |form| %>
 <% if message.errors.any? %>
 <div id="error_explanation">
     <h2><%= pluralize(message.errors.count, "error") %> prohibited this message from being saved:</h2>
@@ -11,17 +11,12 @@
 </div>
 <% end %>
 
-<div class="field">
-    <%= form.label :content %>
-    <%= form.text_area :content %>
+<div class="form-group">
+    <%= form.text_field :content, class:"form-control mr-2" %>
 </div>
-
-
 
 <%= form.hidden_field :room_id, value: room.id %>
 
+<%= form.submit "Add message", class:"btn btn-primary" %>
 
-<div class="actions">
-    <%= form.submit %>
-</div>
 <% end %>
