--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -5,6 +5,7 @@
     position: absolute;
     bottom: 0;
     padding: 20px;
+    width: calc(100% - 15px);
     input[type="text"] {
       height: 45px;
       font-size: 18px;
