Add style to message display boxes

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,6 +1,19 @@
 .chat-room {
   overflow-y: hidden;
   height: 100vh;
+  .message {
+    display: inline-block;
+    .content {
+      background-color: #eeeeee;
+      padding: 8px 16px;
+      border-radius: 20px;
+    }
+    .author {
+      font-size: 0.8rem;
+      color: #777777;
+      margin-left: 10px;
+    }
+  }
   .chat-box {
     position: absolute;
     bottom: 0;
