--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -22,6 +22,7 @@
         float: right;
         .content {
           background-color: #007bff;
+          color: white;
         }
       }
     }
