--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,3 +1,5 @@
+<div id="user-id" data-user-id="<%= current_user.id%>"></div>
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-3">
@@ -26,9 +28,11 @@
                         </li>
                     </ul>
                 </nav>
-                <% @room.messages.each do |message| %>
-                <%= render "messages/message", message: message %>
-                <% end %>
+                <div id="messages">
+                    <% @room.messages.each do |message| %>
+                    <%= render "messages/message", message: message %>
+                    <% end %>
+                </div>
                 <div class="chat-box">
                     <%= render "messages/form", message: Message.new, room: @room %>
                 </div>
