--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -4,7 +4,13 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-3">
-            <%= render "form", room: Room.new       %>
+            <div class="card">
+                <div class="card-body">
+                    <small> Logged in as </small><br>
+                    <b><%= current_user.username%></b>
+                </div>
+            </div>
+            <%= render "form", room: Room.new %>
             <hr>
             <% @rooms.each do |room| %>
             <%= link_to room do %>
@@ -23,11 +29,6 @@
                     <span href="#" class="navbar-brand">
                         <%= @room.name %>
                     </span>
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <p>Hello, <%= current_user.username%> </p>
-                        </li>
-                    </ul>
                 </nav>
                 <div id="messages">
                     <% @room.messages.each do |message| %>
