--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -46,3 +46,25 @@
 .card.no-outline {
   border: none;
 }
+
+.room-link {
+  &:hover {
+    text-decoration: none;
+  }
+
+  .room-card {
+    transition: background-color 0.6s ease;
+    border-radius: 20px;
+    &:hover {
+      background-color: #eeeeee;
+    }
+    .name {
+      font-weight: bold;
+      color: black;
+    }
+    .member-count {
+      color: #777777;
+      font-weight: light;
+    }
+  }
+}
