--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -13,11 +13,11 @@
             <%= render "form", room: Room.new %>
             <hr>
             <% @rooms.each do |room| %>
-            <%= link_to room do %>
-            <div class="card no-outline mb-2">
+            <%= link_to room, class: "room-link" do %>
+            <div class="card no-outline mb-2 room-card">
                 <div class="card-body">
-                    <b><%= room.name %></b><br>
-                    <small><%= room.users.uniq.count %> Members </small>
+                    <span class="name"><%= room.name %></span><br>
+                    <span class="member-count"><small><%= room.users.uniq.count %> Members </small></span>
                 </div>
             </div>
             <% end %>
