Add styling to active room buttons

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -58,6 +58,15 @@
     &:hover {
       background-color: #eeeeee;
     }
+    &.active {
+      background-color: black;
+      .name {
+        color: white;
+      }
+      .member-count {
+        color: #e0e0e0;
+      }
+    }
     .name {
       font-weight: bold;
       color: black;
