Remove scrollbar,add box borders

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,3 +1,10 @@
+body {
+  ::-webkit-scrollbar {
+    display: none;
+  }
+  -ms-overflow-style: none;
+}
+
 .chat-room {
   overflow-y: scroll;
   height: 100vh;
@@ -76,4 +83,8 @@
       font-weight: light;
     }
   }
+}
+
+.rooms-sidebar {
+  border-right: 1px solid #eeeeee;
 }
