--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -32,7 +32,7 @@
         <div class="col-9">
             <% if @room.present? %>
             <div class="chat-room">
-                <nav class="navbar navbar-light bg-light mb-4">
+                <nav class="navbar navbar-light">
                     <span href="#" class="navbar-brand">
                         <%= @room.name %>
                     </span>
