Add dot in before user name

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -104,3 +104,10 @@ body {
 .rooms-sidebar {
   border-right: 1px solid #eeeeee;
 }
+
+.activity-status {
+  font-size: 20px;
+  float: left;
+  margin-top: -6px;
+  margin-right: 4px;
+}
