--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -4,6 +4,9 @@
             <%= message.content %>
         </div>
         <div class="author">
+            <span class="activity-status user-<%= message.user.id%>">
+                •
+            </span>
             <%= message.user.username %>
         </div>
     </div>
