--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -4,7 +4,7 @@
             <%= message.content %>
         </div>
         <div class="author">
-            <span class="activity-status user-<%= message.user.id%>">
+            <span class="activity-status user-<%= message.user.id%>-status">
                 •
             </span>
             <%= message.user.username %>
